<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NoteBlock</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">NoteBlock</string>
    <string name="title_activity_note">NoteBlock</string>
    <string name="no_notes">No Notes Yet</string>
    <string name="menu_insert">Add Note</string>
    <string name="menu_delete">Delete Note</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="edit_note">Edit Note</string>
    <string name="time">Time </string>
    <string name="date">Date </string>
    <string name="time_date">Time and Date</string>
    <string name="position">Position</string>
    <string name="new_button">New </string>
    <string name="googleMapsInformation">Please put the marker where you wish to be reminded</string>
    <string name="menu_gps">Find Cordinates</string>
    <string name="alarm">Alarm</string>
    <string name="wait">Please wait &#8230;</string>
    <string name="insert_title">Write the title here.</string>
    <string name="insert_body">Write the note here.</string>
    <string name="no_time_alarm">No time-alarm yet.</string>
    <string name="no_position_alarm">No position-alarm yet.</string>
    <string name="notification_title">NoteBlock Alarm!</string>
    <string name="position_notification_content">You have reached your destination with: </string>
    <string name="pin_title">Do you want to be reminded close to this location?</string>
    <string name="network_alert">Please make sure your Network Connection is ON</string>
    <string name="toast_set_alarm">The alarm has been set at:</string>
    <string name="no_alarm_has_been_set">The time is older then current date, No alaram has been set</string>
    <string name="no_maps_alert">Would you like to be reminded by position?</string>
   	<string name="start_google_maps">Start Google Maps</string>
   	<string name="noGpsNetwork">You need either gps or network connection for the position-alarm to work.</string>
   	<string name="stoppedAlarm">The alarm has stopped.</string>
   	<string name="noTitleSet">No title set</string>
</resources>