<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/frameMapsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.google.android.maps.MapView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/mapView"
        android:layout_width="fill_parent"
        android:layout_height="383dp"
        android:layout_above="@+id/mapButtons"
        android:layout_below="@+id/infoMapsLayout"
        android:apiKey="0p7NzoIvYO3pjWAx4isysgxMvvfcIBthGimujnA"
        android:clickable="true" >

    </com.google.android.maps.MapView>

    <RelativeLayout
        android:id="@+id/infoMapsLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" >
        
        <TextView
            android:id="@+id/mapsInformation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:ems="10"
            android:text="@string/googleMapsInformation" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/mapButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@color/notepad_light"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/cancelMapsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:onClick="cancelMaps"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/confirmMapsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:onClick="confirmMaps"
            android:text="@string/save" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/waitMapsLayout"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/rounded" >

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />

        <Button
            android:id="@+id/mapsWaitBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/mapsWaitText"
            android:layout_alignRight="@+id/mapsWaitText"
            android:layout_below="@+id/progressBar1"
            android:layout_marginTop="5dp"
            android:onClick="stopFindPositionService"
            android:text="@string/cancel" />

        <TextView
            android:id="@+id/mapsWaitText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/progressBar1"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:gravity="center"
            android:text="@string/wait"
            android:textColor="#000000" />
    </RelativeLayout>

</RelativeLayout>